Correct contrast in feedback panel

--- a/mon-pix/app/styles/components/_feedback-panel.scss
+++ b/mon-pix/app/styles/components/_feedback-panel.scss
@@ -9,7 +9,7 @@
 
 .feedback-panel__open-link {
   cursor: pointer;
-  color: $grey-30;
+  color: $grey-50;
   font-family: $font-roboto;
   font-weight: $font-medium;
   font-size: 0.875rem;
