--- a/mon-pix/app/styles/globals/_buttons.scss
+++ b/mon-pix/app/styles/globals/_buttons.scss
@@ -187,4 +187,14 @@
   &--grey {
     color: $grey-60;
   }
+
+  &--darker {
+    color: $blue-hover;
+    &:hover,
+    &:focus,
+    &:active {
+      color: $dark-blue-pro;
+    }
+
+  }
 }
